opam-version: "1.2"
maintainer: "opensource@janestreet.com"
authors: ["Jane Street Group, LLC <opensource@janestreet.com>"]
homepage: "https://github.com/janestreet/topological_sort"
bug-reports: "https://github.com/janestreet/topological_sort/issues"
dev-repo: "https://github.com/janestreet/topological_sort.git"
license: "Apache-2.0"
build: [
  ["jbuilder" "build" "--only-packages" "topological_sort" "--root" "." "-j" jobs]
]
depends: [
  "core_kernel"
  "jbuilder"
  "ppx_driver"
  "ppx_jane"
]
available: [ ocaml-version >= "4.03.0" ]
descr: "
Topological sort algorithm

Topological_sort is a single-module library that implements a simple
topological-sort algorithm.
"
