opam-version: "1.2"
maintainer: "opensource@janestreet.com"
authors: ["Jane Street Group, LLC <opensource@janestreet.com>"]
homepage: "https://github.com/janestreet/topological_sort"
bug-reports: "https://github.com/janestreet/topological_sort/issues"
dev-repo: "git+https://github.com/janestreet/topological_sort.git"
license: "Apache-2.0"
build: [
  ["jbuilder" "build" "-p" name "-j" jobs]
]
depends: [
  "core_kernel"
  "ppx_driver"
  "ppx_jane"
  "jbuilder"                {build & >= "1.0+beta12"}
  "ocaml-migrate-parsetree" {>= "1.0"}
]
available: [ ocaml-version >= "4.04.1" ]
descr: "
Topological sort algorithm

Topological_sort is a single-module library that implements a simple
topological-sort algorithm.
"
