opam-version: "2.0"
maintainer: "Jane Street developers"
authors: ["Jane Street Group, LLC"]
homepage: "https://github.com/janestreet/topological_sort"
bug-reports: "https://github.com/janestreet/topological_sort/issues"
dev-repo: "git+https://github.com/janestreet/topological_sort.git"
doc: "https://ocaml.janestreet.com/ocaml-core/latest/doc/topological_sort/index.html"
license: "MIT"
build: [
  ["dune" "build" "-p" name "-j" jobs]
]
depends: [
  "ocaml" {>= "5.1.0"}
  "base"
  "ppx_jane"
  "stdio"
  "dune"     {>= "3.17.0"}
]
available: arch != "arm32" & arch != "x86_32"
synopsis: "Topological sort algorithm"
description: "
Topological_sort is a single-module library that implements a simple
topological-sort algorithm.
"
